fix custom-page hero buttons and spacing

--- a/assets/css/src/_custom-page-template.css
+++ b/assets/css/src/_custom-page-template.css
@@ -95,7 +95,7 @@
 		/* background-image: linear-gradient(90deg,#f55050,#f18a22,#f2f21f,#00793f,#4040fc,#9e04bc); */
 		padding: 0;
 		color: #fff;
-		background: #fff;
+		/* background: #fff; */
 		/* max-height: 35rem; */
 		/* -webkit-clip-path: polygon(100% 100%,100% 0,-400% 0);
 		clip-path: polygon(100% 100%,100% 0,-400% 0); */
