--- a/assets/css/src/_hero-text.css
+++ b/assets/css/src/_hero-text.css
@@ -121,4 +121,5 @@ h1.callNumberBackground {
 }
 .listenLive.kwvhX button {
 	background: #1a06ca;
+	margin-bottom: 2rem;
 }
